fix: navbar gap alignment issue

--- a/styling/navbar.css
+++ b/styling/navbar.css
@@ -16,7 +16,7 @@
 
 	display: flex;
 	align-items: center;
-	justify-content: space-between;
+	justify-content: space-evenly;
 	gap: 10px;
 
 	padding: 2px 20px;
@@ -35,7 +35,7 @@
 	display: flex;
 	align-items: center;
 	list-style: none;
-	gap: 30px;
+	gap: 15px;
 	margin: 0;
 	padding: 0;
 }
